@@ -8,7 +8,7 @@
 </head>
 <body class="cover">
     <div [%- IF draft -%]class="draft"[%- END -%]>
-	<div class="logo"></div>
+	<div class="logo" style="background-image:url([% logo %])"></div>
 	<div class="leader">
 		<div class="product">[%- product -%]</div>
 		<div class="version">[%- version -%]</div>
