@@ -32,6 +32,7 @@
   - Replaced a broken link to CPAN with a working link BZ# 973461
   - Remove duplicate brand files from base install. BZ #966143
   - Add extras_dir parameter to override extras directory. BZ #953998
+  - Fix PDF ignoring cover logo. BZ #974353
 
 3.1.5 Mon Mar 18 2013
   - Fix translated PDF encode issue when build from packaged books. BZ #922618
@@ -57,6 +58,7 @@
   - Fix using edition for version on cover pages. BZ #912180
   - Fix nested entities causing XML::TreeBuilder to fail. BZ #912187
   - Fix for cover pages causing page number overrun. BZ #912967
+  - Fix PDF ignoring logo image. BZ #974353
 
 3.1.1 Thu Feb 07 2013
   - Fix web site CSS for admonitions breaking layout for books built on P3.0. BZ #908539
